<resources>
    <string name="app_name">Apay币</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="immediately_login">立即登录</string>
    <string name="forget_password">忘记密码?</string>

    <string name="setting_pwd">设置密码</string>
    <string name="get_identifying_code">获取验证码</string>
    <string name="please_intput_phone_num">请输入手机号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="invite_code">邀请码:</string>
    <string name="nike_name">昵称:</string>
    <string name="phone_num">手机号码:</string>
    <string name="identifying_code">验证码:</string>
    <string name="login_password">登录密码:</string>
    <string name="check_password">确认密码:</string>
    <string name="pay_password">支付密码:</string>
    <string name="existing_account">已有账号?</string>
    <string name="forget_login_password">忘记登录密码</string>
    <string name="submit">提交</string>

    <string name="credit">信用:</string>
    <string name="scavenging_payment">扫码支付</string>
    <string name="balance_money">余额</string>
    <string name="ticket">券</string>
    <string name="roll_input">转入</string>
    <string name="roll_out">转出</string>
    <string name="digital_asset">数字资产</string>
    <string name="online_mall">线上商城</string>
    <string name="near_home">周边商家</string>

    <string name="goods_detail">商品详情</string>

    <string name="customer">客服</string>
    <string name="uid">UID:</string>
    <string name="my_order">我的订单</string>
    <string name="adress_manager">地址管理</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="my_assets">我的资产</string>
    <string name="share">分享</string>
    <string name="person_info">个人消息</string>
    <string name="setting">设置</string>
    <string name="verson_code">版本</string>
    <string name="about_myself">关于我们</string>
    <string name="notice">公告</string>
    <string name="become_businessman">申请成为商家</string>
    <string name="pay_me_to_pay">扫一扫 向我付款</string>
    <string name="save_QR_Code">保存二维码</string>
    <string name="next">下一步</string>
    <string name="Convertibility">兑换积分</string>
    <string name="input_phone_uid">请收入手机号/UID</string>
    <string name="reciprocal_account">对方账户:</string>
    <string name="old_pwd">旧密码:</string>
    <string name="unit">Apay币</string>
    <string name="shop_type">店铺类型:</string>
    <string name="shop_classification">店铺分类:</string>
    <string name="shop_name">店铺名称:</string>
    <string name="contact_info">联系方式:</string>
    <string name="pay_sucess">支付成功</string>
    <string name="look_my_shop">查看我的店铺</string>
    <string name="editor">编辑</string>
    <string name="delete">删除</string>
    <string name="setting_default">设置为默认</string>
    <string name="shipping_address">收货地址：</string>
    <string name="contact_way">联系方式：</string>
    <string name="consignee_people">收货人：</string>
    <string name="save">保存</string>
    <string name="contact_phone">联系电话:</string>
    <string name="please_input_contact_phone">请输入联系电话</string>
    <string name="contact_people">联系人:</string>
    <string name="please_input_contact_people_phone">请输入联系人电话</string>
    <string name="detail_address">详细地址:</string>
    <string name="please_input_detail_address">请输入详细地址</string>
    <string name="select">选择</string>
    <string name="area">所在地区:</string>
    <string name="new_add_ship_address">新增收货地址</string>
    <string name="onlin">线上</string>
    <string name="under_online">线下</string>
    <string name="become_business_pay_money">申请成为商家需缴纳:</string>
    <string name="immediately_buy">立即购买</string>
    <string name="deposit_balance">存入余额</string>
    <string name="apay_check_in_red_packet">Apay币签到红包</string>
    <string name="day_day_check_in">天天签到 好礼不断</string>
    <string name="forget_login_pwd">忘记登录密码？</string>
    <string name="check_new_pwd">确认新密码:</string>
    <string name="new_pwd">新密码:</string>
    <string name="please_add_bank_card">请添加银行卡</string>
    <string name="delete_order">删除订单</string>
    <string name="compled">已完成</string>
    <string name="send_goods">已发货</string>
    <string name="check_ship">确认收货</string>
    <string name="name">姓名</string>
    <string name="order_num">订单号:</string>
    <string name="confirmation_receivables">确认收款</string>
    <string name="contact_seller">联系卖家</string>
    <string name="wait_saller_send_goods">等待卖家发货</string>
    <string name="num_asset">数字资产</string>
    <string name="give_feedback">意见反馈</string>
    <string name="check_change">确认兑换</string>
    <string name="kindly_reminder">温馨提示:最少兑换数量100，请输入100的整数倍</string>
    <string name="exchange_ticket">兑换成券</string>
    <string name="mall">商城</string>
    <string name="buy_num">购买数量</string>
    <string name="pwd_type">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="forget_pay_pwd">忘记支付密码？</string>

</resources>
