<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@mipmap/img_person_center_bg">

        <com.ysxsoft.apaycoin.widget.CircleImageView
            android:id="@+id/img_head"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:src="@mipmap/img_normal_head"
            app:civ_border_color="@color/btn_color"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit" />

            <LinearLayout
                android:id="@+id/ll_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_no_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:id="@+id/tv_recover_credit"
                style="@style/button_style"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="恢复" />

        </LinearLayout>

        <include
            android:id="@+id/ll_title"
            layout="@layout/transparent_bg_title_layout" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/uid"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_uid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="89564789"
            android:textSize="13sp" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/nike_name"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_nike_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="你好世界"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ll_become_business"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/img_business"
            android:gravity="center"
            android:text="@string/become_businessman"
            android:textSize="11sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />


        <TextView
            android:id="@+id/ll_my_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/img_my_order"
            android:gravity="center"
            android:text="@string/my_order"
            android:textSize="11sp" />


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />


        <TextView
            android:id="@+id/ll_address_manager"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/img_adress_manager"
            android:gravity="center"
            android:text="@string/adress_manager"
            android:textSize="11sp" />

    </LinearLayout>

    <View style="@style/gray_line_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ll_my_bank"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/img_my_bank_card"
            android:gravity="center"
            android:text="@string/my_bank_card"
            android:textSize="11sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />


        <TextView
            android:id="@+id/ll_my_asset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/img_my_assets"
            android:gravity="center"
            android:text="@string/my_assets"
            android:textSize="11sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />


        <TextView
            android:id="@+id/ll_share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/img_share"
            android:gravity="center"
            android:text="@string/share"
            android:textSize="11sp" />

    </LinearLayout>

    <View style="@style/gray_line_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/ll_notice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/img_notice"
            android:gravity="center"
            android:text="@string/notice"
            android:textSize="11sp" />


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/ll_person_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/img_person_info"
            android:gravity="center"
            android:text="@string/person_info"
            android:textSize="11sp" />


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/ll_give_feedback"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/img_give_feedback"
            android:gravity="center"
            android:text="@string/give_feedback"
            android:textSize="11sp" />

    </LinearLayout>

    <View style="@style/gray_line_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/ll_about_my"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/img_about_myself"
            android:gravity="center"
            android:text="@string/about_myself"
            android:textSize="11sp" />


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/ll_version_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/img_version_code"
            android:gravity="center"
            android:text="@string/verson_code"
            android:textSize="11sp" />


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />


        <TextView
            android:id="@+id/ll_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/img_red_setting"
            android:gravity="center"
            android:text="@string/setting"
            android:textSize="11sp" />

    </LinearLayout>


</LinearLayout>