<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_num"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ed_phone_num"
                style="@style/edittext_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_intput_phone_num"
                android:maxLines="1"
                android:maxLength="11"
                android:inputType="number"
                android:paddingLeft="10dp" />

        </LinearLayout>

        <View style="@style/gray_line_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/identifying_code"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ed_identifying_code"
                style="@style/edittext_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="请输入验证码"
                android:maxLines="1"
                android:inputType="number"
                android:paddingLeft="30dp" />

            <TextView
                android:id="@+id/get_identifying_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_shape_bg"
                android:padding="5dp"
                android:text="@string/get_identifying_code"
                android:textColor="@color/white"
                android:textSize="13sp" />

        </LinearLayout>

        <View style="@style/gray_line_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_pwd"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ed_setting_login_pwd"
                style="@style/edittext_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请设置新登录密码"
                android:maxLines="1"
                android:inputType="textPassword"
                android:numeric="integer"
                android:paddingLeft="15dp" />

        </LinearLayout>

        <View style="@style/gray_line_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_password"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ed_second_login_pwd"
                style="@style/edittext_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="请再次输入新登录密码"
                android:inputType="textPassword"
                android:numeric="integer"
                android:maxLines="1"
                android:paddingLeft="10dp" />

        </LinearLayout>

        <View style="@style/gray_line_style" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        style="@style/button_style"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:text="@string/submit" />

</LinearLayout>