<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/white_shape_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/reciprocal_account"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/ed_phone_uid"
            style="@style/edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_phone_uid"
            android:inputType="number"
            android:paddingLeft="10dp" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        style="@style/button_style"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/next"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/btn_convertibility"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_shape_stroke"
        android:text="兑换券"
        android:visibility="gone"
        android:textColor="@color/btn_color"
        android:textSize="15sp"/>


</LinearLayout>